--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/themes/black-tie/jquery-ui.css" rel="stylesheet">
-    <link href="../src/stylesheets/jquery.tocify.css" rel="stylesheet">
-    <link href="styles/prettify.css" type="text/css" rel="stylesheet" />
-    <link href="css/freelancer.min.css" rel="stylesheet">
-    <link href="css/all.min.css" rel="stylesheet">
-    <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
+    <link href="src/stylesheets/jquery.tocify.css" rel="stylesheet">
+    <link href="demos/styles/prettify.css" type="text/css" rel="stylesheet" />
+    <link href="demos/css/freelancer.min.css" rel="stylesheet">
+    <link href="demos/css/cosmo.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap" rel="stylesheet"> 
 
-    <link rel="stylesheet" href="css/formato.css" type="text/css" />
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="demos/css/formato.css" type="text/css" />
+    <link rel="stylesheet" href="demos/css/bootstrap.css" type="text/css" />
     
    
   </head>
@@ -67,7 +66,7 @@
             <div class="container">
               <h2>Overview</h2>
               <p>Texto de introducción al programa</p>
-              <iframe src="../plantillas/timeline.html" frameborder="0" width="100%" height="600" scrolling="no"></iframe>
+              <iframe src="plantillas/timeline.html" frameborder="0" width="100%" height="600" scrolling="no"></iframe>
               <iframe src="https://www.google.com/maps/d/embed?mid=1aOlo3ab8vy_ufgAaIqFwU-O7NBsmc8vT&amp;hl=es" width="100%" height="550"></iframe>
             </div>
           </section>
@@ -99,10 +98,10 @@
           </ul>
           <div class="tab-content">
             <div id="alba" class="container tab-pane active"><br>
-              <iframe src='../plantillas/Alba_Granados/AlbaGranados.html' width="100%" height="1200" frameborder="0" scrolling="no"></iframe>
+              <iframe src='plantillas/Alba_Granados/AlbaGranados.html' width="100%" height="1200" frameborder="0" scrolling="no"></iframe>
             </div>
             <div id="carmen" class="container tab-pane fade"><br>
-              <iframe src='../plantillas/CASA CARMEN/CasaCarmen.html' width="100%" height="1200" frameborder="0" scrolling="no"></iframe>
+              <iframe src='plantillas/CASA CARMEN/CasaCarmen.html' width="100%" height="1200" frameborder="0" scrolling="no"></iframe>
             </div>
           </div>
        </div>
@@ -117,7 +116,7 @@
         <p>The bus will go trough the port area to <strong>Montjuic</strong> and the Olympic area seeing Palau Sant Jordi and the stadium, then they will stop at the Grey Cable car station. This <strong>Cable car</strong> will transfer guests to the Castle. Our guide will explain guests the history of all the area and the castle. From there they will walk to Miramar where they will find the Red Cable Car. This is the oldest cable car of the city and it offers a great panoramic view of the city - a unique experience - Each cable car is up to 18 pax - this cable car can’t be booked in advance or privatized. The <strong>Red Cable Car</strong> ends at the Old Port (is the same tower as the restaurant Torre de Alta Mar). Once everyone will be at Port Station they will be picked up by the bus that will transfer them to the hotel.</p>
         <div class="images">
           <img src="https://www.webarcelona.net/sites/default/files/teleferico-montjuic_0.jpg"> 
-          <img src="../images/montjuic.jpg"> 
+          <img src="images/montjuic.jpg"> 
           <img src="https://www.lavanguardia.com/r/GODO/LV/p3/WebSite/2016/09/09/Recortada/LAVANGUARDIA_G_3640423-162-kxzD-U41198934917QR-992x558@LaVanguardia-Web.jpg"> 
         </div>
         <div id="dinner-near-the-sea">
@@ -147,7 +146,7 @@
           </ul>
           <iframe src="https://uploads.knightlab.com/storymapjs/ee2f18a9c1765fc1a4086f419505950c/ebike-tour/index.html" frameborder="0" width="100%" height="800"></iframe>
           <p>When the group arrives to Alella, they will visit this small and familiar winery. They will enjoy of the views of Alella, which is a really small town but with a good living atmosphere. after the visit they will finish the acitvity having a picnic lunch outside (if weather allows us)!</p>
-          <p><img src = "../images/bouquetalella.jpg" width="100%"></p>
+          <p><img src = "images/bouquetalella.jpg" width="100%"></p>
           <p style="text-align: center; font-size: 50px;">END OF THE PROGRAMME</p>
           <h2>Terms & Conditions</h2>
             <ul>
@@ -160,7 +159,7 @@
             </ul>
             <hr />
           <h2>Budget</h2>
-           <iframe src="../plantillas/budget-prueba.html" frameborder="0" width="100%" height="1100" scrolling="no"></iframe>
+           <iframe src="plantillas/budget-prueba.html" frameborder="0" width="100%" height="1100" scrolling="no"></iframe>
         </div>
     </div>   
   </section>
@@ -169,7 +168,7 @@
   <section id="credentials">
     <div class="container">
       <h2>Credentials</h2>
-      <iframe src="../plantillas/credentials.html" frameborder="0" width="100%" height="2000" scrolling="no">
+      <iframe src="plantillas/credentials.html" frameborder="0" width="100%" height="2000" scrolling="no">
       </iframe>
     </div>
       <!-- Contact Section Heading -->
@@ -234,17 +233,17 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../libs/jqueryui/jquery-ui-1.9.1.custom.min.js"></script>
-    <script src="javascripts/bootstrap.js"></script>
-    <script src="../src/javascripts/jquery.tocify.js"></script>
-    <script src="javascripts/prettify.js"></script>
+    <script src="libs/jqueryui/jquery-ui-1.9.1.custom.min.js"></script>
+    <script src="demos/javascripts/bootstrap.js"></script>
+    <script src="src/javascripts/jquery.tocify.js"></script>
+    <script src="demos/javascripts/prettify.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="javascripts/freelancer.min.js"></script>
+    <script src="demos/javascripts/freelancer.min.js"></script>
 
       <!-- Bootstrap core JavaScript -->
  
-    <script src="javascripts/bootstrap.bundle.min.js"></script>
+    <script src="demos/javascripts/bootstrap.bundle.min.js"></script>
 
     
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
